cmake_minimum_required(VERSION 3.20)
project(Lab3_3sem)

set(CMAKE_CXX_STANDARD 14)

add_executable(Lab3_3sem
        arraysequence.h
        dynamic_array.h
        linkseq.h
        link_list.h
        sequence.h
        graph.h
        main.cpp
        SortedSequence.h
        interface.h
        )
